--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,105 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/layoutMain"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-android:padding="24dp"
-android:background="#E0F2F1">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#BBDEFB"
+    tools:context=".MainActivity">
 
-    <!-- Título -->
     <TextView
-        android:id="@+id/tvTitulo"
+        android:id="@+id/appTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
         android:text="¡Bienvenido a TeleTrivia!"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="#1A237E"
-        android:layout_gravity="center_horizontal"
-        android:paddingBottom="8dp" />
+        android:textSize="32sp"
+        android:textStyle="bold" />
 
-    <!-- Subtítulo -->
     <TextView
-        android:id="@+id/tvSubtitulo"
+        android:id="@+id/appDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="La app diseñada para testear tu conocimiento y retar a tus amigos!\nElija los parámetros de juego"
-        android:gravity="center"
-        android:textSize="14sp"
-        android:textColor="#333"
-        android:paddingBottom="16dp" />
-
-    <!-- Categoría -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Categoría:"
-        android:textStyle="bold"
-        android:textColor="#000000"/>
-
-    <Spinner
-        android:id="@+id/spinnerCategoria"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#B2DFDB" />
-
-    <!-- Cantidad -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cantidad:"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:layout_marginTop="8dp"/>
-
-    <EditText
-        android:id="@+id/etCantidad"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="# Preguntas"
-        android:inputType="number"
-        android:backgroundTint="#B2DFDB" />
-
-    <!-- Dificultad -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Dificultad:"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:layout_marginTop="8dp"/>
-
-    <Spinner
-        android:id="@+id/spinnerDificultad"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#B2DFDB" />
-
-    <!-- Botones -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_below="@id/appTitle"
         android:layout_marginTop="16dp"
-        android:gravity="center_horizontal">
+        android:layout_marginHorizontal="24dp"
+        android:gravity="center"
+        android:text="La app diseñada para testear tu conocimiento y retar a tus amigos!\nA continuación, elija los parámetros de juego"
+        android:textSize="16sp" />
+
+    <LinearLayout
+        android:layout_width="366dp"
+        android:layout_height="526dp"
+        android:layout_below="@id/appDescription"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="32dp"
+        android:background="#E3F2FD"
+        android:elevation="8dp"
+        android:orientation="vertical"
+        android:padding="24dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Categoría:"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/categoryLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            app:boxBackgroundColor="@android:color/white"
+            app:boxStrokeColor="#2196F3">
+
+            <AutoCompleteTextView
+                android:id="@+id/categoryDropdown"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="Seleccione la categoría"
+                android:inputType="none"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cantidad:"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/amountLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            app:boxBackgroundColor="@android:color/white"
+            app:boxStrokeColor="#2196F3">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/amountInput"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="Escriba la cantidad de preguntas"
+                android:inputType="number" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Dificultad:"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/difficultyLayout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="24dp"
+            app:boxBackgroundColor="@android:color/white"
+            app:boxStrokeColor="#2196F3">
+
+            <AutoCompleteTextView
+                android:id="@+id/difficultyDropdown"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="Seleccione el nivel dificultad"
+                android:inputType="none" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btnComprobarConexion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Comprobar Conexión"
-            android:backgroundTint="#1A237E"
-            android:textColor="#FFFFFF"
-            android:layout_marginEnd="8dp" />
+            android:id="@+id/checkConnectionButton"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="#2196F3"
+            android:text="Comprueba tu conexión"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
 
         <Button
-            android:id="@+id/btnComenzar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Comenzar"
+            android:id="@+id/startButton"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:backgroundTint="#2196F3"
             android:enabled="false"
-            android:backgroundTint="#BDBDBD"
-            android:textColor="#FFFFFF" />
+            android:text="Comenzar juego"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
